--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="js/settings.js"></script>
 <script src="js/app.js"></script>
 <table id="table"></table>
 <select id="example"></select>
